--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'cp.to4slpn'
+group = 'cp.to4slpn.notifier'
 version = '1.0'
 
 repositories {
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:4.12.0")
+    implementation("org.jsoup:jsoup:1.20.1")
 }
